--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ jks.key.alias=master_key_alias
 jks.key.password=PasswordJksKeyAlias_110226!!
 jks.iv.param=85TsguuK62tuLOix2aqxaA==
 db.password.encrypted=lCadxvZn4DFBMuh7vzva5YIJa+/05jcRsad9NuROwvQ=
+
+uploadFilePath=C:\\Users\\anton\\Desktop\\tikaUploadSna
