--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,19 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
   version="4.0">
     <session-config>
-        <session-timeout>15</session-timeout>
-        <cookie-config>
-            <http-only>true</http-only>
-            <secure>true</secure>
-            <same-site>Strict</same-site>
-        </cookie-config>
+        <session-timeout>15</session-timeout> <cookie-config>
+        <http-only>true</http-only> <secure>true</secure> </cookie-config>
+        <tracking-mode>COOKIE</tracking-mode>
     </session-config>
+    <filter>
+        <filter-name>CookieSecurityFilter</filter-name>
+        <filter-class>com.sicnelleapplicazioni.filter.CookieSecurityFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>CookieSecurityFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <filter>
         <filter-name>RateLimitingFilter</filter-name>
@@ -37,7 +43,7 @@
     </filter>
     <filter-mapping>
         <filter-name>SessionControlFilter</filter-name>
-        <url-pattern>/app/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
     <filter>
@@ -50,7 +56,7 @@
     </filter-mapping>
 
     <welcome-file-list>
-        <welcome-file>login.jsp</welcome-file>
+        <welcome-file>login</welcome-file>
     </welcome-file-list>
 
     <servlet>
