--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -148,11 +148,11 @@
 
     <error-page>
         <error-code>404</error-code>
-        <location>/error404.jsp</location>
+        <location>/WEB-INF/views/error404.jsp</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/error500.jsp</location>
+        <location>/WEB-INF/views/error500.jsp</location>
     </error-page>
 
 </web-app>
