--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,8 +5,11 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
   version="4.0">
     <session-config>
-        <session-timeout>15</session-timeout> <cookie-config>
-        <http-only>true</http-only> <secure>true</secure> </cookie-config>
+        <session-timeout>1</session-timeout>
+        <cookie-config>
+        <http-only>true</http-only>
+        <secure>true</secure>
+    </cookie-config>
         <tracking-mode>COOKIE</tracking-mode>
     </session-config>
 
@@ -140,8 +143,11 @@
         <url-pattern>/delete</url-pattern>
     </servlet-mapping>
 
-    
 
+    <error-page>
+        <error-code>400</error-code>
+        <location>/WEB-INF/views/error400.jsp</location>
+    </error-page>
     <error-page>
         <error-code>404</error-code>
         <location>/WEB-INF/views/error404.jsp</location>
