--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,11 +5,6 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
   version="4.0">
     <session-config>
-        <session-timeout>1</session-timeout>
-        <cookie-config>
-        <http-only>true</http-only>
-        <secure>true</secure>
-    </cookie-config>
         <tracking-mode>COOKIE</tracking-mode>
     </session-config>
 
@@ -22,27 +17,6 @@
         <url-pattern>/login</url-pattern>
     </filter-mapping>
 
-
-
-    <filter>
-        <filter-name>CookieSecurityFilter</filter-name>
-        <filter-class>com.sicnelleapplicazioni.filter.CookieSecurityFilter</filter-class>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>CookieSecurityFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-
-    <filter>
-        <filter-name>XFrameOptionsFilter</filter-name>
-        <filter-class>com.sicnelleapplicazioni.filter.XFrameOptionsFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>XFrameOptionsFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
 
     <filter>
         <filter-name>SessionControlFilter</filter-name>
@@ -143,7 +117,10 @@
         <url-pattern>/delete</url-pattern>
     </servlet-mapping>
 
-
+    <error-page>
+        <error-code>403</error-code>
+        <location>/WEB-INF/views/error403.jsp</location>
+    </error-page>
     <error-page>
         <error-code>400</error-code>
         <location>/WEB-INF/views/error400.jsp</location>
